overflow is causing an issue

--- a/chat/style.css
+++ b/chat/style.css
@@ -61,6 +61,6 @@
 
 #output
 {
-    height:90%;
+    /*height:90%;*/
     overflow: auto;
 }
